--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -829,3 +829,26 @@ input[type="number"]::-webkit-outer-spin-button {
   border: 1px solid $secondary;
   cursor: pointer;
 }
+
+.input-text{
+  padding: 10px;
+  gap: 40px;
+  width: 310px;
+  height: 40px;
+}
+
+.btn-secondary{
+background: #FFFFFF;
+box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.06);
+border-radius: 8px;
+width: 140px;
+height: 50px;
+color: $orange;
+}
+
+.btn-primary{
+border-radius: 8px;
+width: 140px;
+height: 50px;
+background: $orange;
+}
