--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -860,3 +860,15 @@ width: 140px;
 height: 50px;
 background: $orange;
 }
+.btn-outline-primary{
+border-radius: 8px;
+width: 140px;
+height: 50px;
+}
+
+.heading{
+  color: $headings
+}
+.sub-heading{
+  color: $sub-headings
+}
