--- a/src/styles.scss
+++ b/src/styles.scss
@@ -130,6 +130,9 @@ $odp-ui-author-theme: mat-light-theme(
 .fw-600 {
   font-weight: 600 !important;
 }
+.fw-500 {
+  font-weight: 500 !important;
+}
 
 .k8s-icon {
   background: url("/assets/img/k8s_black.png");
