--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -9,18 +9,17 @@
     </div>
   </div>
   <div class="d-flex flex-column position-relative" style="height: 100vh">
-    <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
-    <div
-      class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3"
-    >
-      <div class="font-weight-bold font-lg">Users</div>
-      <div class="btn-group">
+    <!-- <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb> -->
+    <div class="options d-flex">
+      <div class="fw-600 font-xxl">Users</div>
+      <div class="btn-group ml-auto">
         <ng-container *ngIf="hasPermission('PMUBD')">
           <button
             *ngIf="checkedUsers.length > 0"
             type="button"
             class="btn btn-link text-delete"
             (click)="removeUsers()"
+            id="removeusers"
           >
             <span class="fa fa-trash mr-2"></span>
             <span class="text">Remove Users ({{ checkedUsers.length }})</span>
@@ -29,9 +28,10 @@
         <button
           *ngIf="hasPermission('PMUBC')"
           type="button"
-          class="add-new btn btn-dark"
+          class="add-new btn btn-dark mr-2"
           routerLink="bulk-import"
           ngbTooltip="Bulk Import"
+          id="bulkimport"
         >
           <span class="fa fa-upload"></span>
           <!-- <span class="text">Bulk Import</span> -->
@@ -39,6 +39,7 @@
         <button
           *ngIf="hasPermission('PMUBC')"
           type="button"
+          id="newUser"
           class="add-new btn-min-width btn btn-primary"
           (click)="newUser()"
         >
@@ -54,6 +55,7 @@
           <div
             *ngFor="let user of userList; let usrIndex = index"
             class="userList"
+            [id]="'user' + usrIndex"
             (click)="showDetails(user)"
           >
             <div style="display: flex">
@@ -62,6 +64,7 @@
                 value="false"
                 [attr.id]="'checkbox' + usrIndex"
                 class="mr-3"
+                style="margin-top: 5px"
                 (change)="clickCheckbox($event, user)"
               />
               <span class="name"> {{ user.basicDetails.name }}</span>
@@ -92,7 +95,11 @@
           <div style="display: grid">
             <div style="margin-top: 45px">
               <ul class="nav">
-                <li class="nav-item" (click)="switchTab('Groups')">
+                <li
+                  class="nav-item"
+                  (click)="switchTab('Groups')"
+                  id="switchgroup"
+                >
                   <div
                     class="tabs"
                     [ngClass]="{
@@ -102,7 +109,11 @@
                     Groups
                   </div>
                 </li>
-                <li class="nav-item" (click)="switchTab('Attributes')">
+                <li
+                  class="nav-item"
+                  (click)="switchTab('Attributes')"
+                  id="switchattribute"
+                >
                   <div
                     class="tabs"
                     [ngClass]="{
@@ -125,21 +136,30 @@
                 <label style="color: #6c7584; font-weight: 400"
                   >All attributes in which the user has been added</label
                 >
-                <div class="add-attribute">
-                  <i
-                    class="fa fa-plus-circle"
-                    (click)="showAttributeSide()"
-                  ></i>
-                  <label style="font-weight: 500">Add Attribute</label>
+                <div
+                  class="add-attribute hover"
+                  (click)="showAttributeSide()"
+                  id="showAttributeSide"
+                >
+                  <i class="fa fa-plus-circle font-xl"></i>
+                  <label class="fw-500 font-normal heading"
+                    >Add Attribute</label
+                  >
                 </div>
               </div>
               <div *ngIf="currentTab === 'Groups'" style="display: flex">
                 <label style="color: #6c7584; font-weight: 400"
                   >All groups in which the user has been added
                 </label>
-                <div class="add-attribute">
-                  <i class="fa fa-plus-circle" (click)="openGroupModal()"></i>
-                  <label style="font-weight: 500">Add to Groups</label>
+                <div
+                  class="add-attribute hover"
+                  (click)="openGroupModal()"
+                  id="openModal"
+                >
+                  <i class="fa fa-plus-circle font-xl"></i>
+                  <label class="fw-500 font-normal heading"
+                    >Add to Groups</label
+                  >
                 </div>
               </div>
               <div *ngIf="showTable" class="mt-4">
@@ -177,7 +197,7 @@
                   type="button"
                   style="width: auto; margin: auto"
                   class="btn btn-primary add-button input-text"
-                  id="createNewUserYes"
+                  id="showAttributeSide"
                   (click)="showAttributeSide()"
                 >
                   Add Attributes
@@ -195,7 +215,7 @@
                   type="button"
                   style="width: auto; margin: auto"
                   class="btn btn-primary add-button input-text"
-                  id="createNewUserYes"
+                  id="addToGroup"
                   (click)="openGroupModal()"
                 >
                   Assign to group
@@ -222,6 +242,7 @@
           </div>
           <span
             class="fa fa-times text-muted hover ignore-click mb-3"
+            id="removeSelectedModalRef"
             (click)="removeSelectedModalRef.close(false)"
           ></span>
         </div>
@@ -236,6 +257,7 @@
         <div class="d-flex align-items-center justify-content-end mt-4">
           <button
             type="button"
+            id="removemodal"
             class="btn btn-min-width btn-delete"
             (click)="removeSelectedModalRef.close(true)"
           >
@@ -258,6 +280,7 @@
     >
       <span
         class="fa fa-times text-secondary hover close"
+        id="closeicon"
         (click)="showNewUserWindow ? closeWindow(true) : closeWindow()"
       ></span>
       <div *ngIf="showPasswordSide && !showNewUserWindow">
@@ -286,6 +309,7 @@
                 autocomplete="new-password"
               />
               <span
+                id="showPass"
                 class="fas eye-icon position-absolute hover"
                 [ngClass]="{
                   'fa-eye': !showPassword['new'],
@@ -332,6 +356,7 @@
                   'fa-eye-slash': showPassword['confirm']
                 }"
                 (click)="showPassword['confirm'] = !showPassword['confirm']"
+                id="showPassword"
               ></span>
             </div>
             <span
@@ -353,7 +378,7 @@
             <button
               type="button"
               class="btn btn-primary add-button input-text"
-              id="createNewUserYes"
+              id="resetpassowrd"
               (click)="resetPassword()"
             >
               Save
@@ -399,6 +424,7 @@
                 type="button"
                 class="mb-3 ng-star-inserted border bg-white d-flex align-items-center p-2"
                 (click)="triggerAzureToken()"
+                id="getAzuretoken"
               >
                 <span class="azure-logo mr-2"></span>
                 <span>Login to Azure</span>
